[project]
name = "customer-support-routing"
version = "0.1.0"
description = "OpenEnv-compatible customer support routing environment"
authors = [
  { name="Umang Gaur" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core>=0.2.0",
  "openai>=1.12.0",
  "python-dotenv"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["server", "cs_routing_env"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"